--- a/styles/app.css
+++ b/styles/app.css
@@ -98,16 +98,16 @@ body {
   border-bottom: none;
 }
 .win-message {
+  display: none;
   position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   background-color: rgba(0, 0, 0, 0.9);
-  display: none;
   justify-content: center;
   align-items: center;
-  color: white;
+  color: rgb(182, 25, 25);
   font-size: 5rem;
   flex-direction: column;
 }
